src/objects/socialmedia_settings__c.object
<CustomObject>
    <description>The Name will show-up in the Performance Gantt view.</description>
    <fields>
        <fullName>Auto_import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bar_color__c</fullName>
        <defaultValue>&quot;#222,#666,#ccc&quot;</defaultValue>
        <label>Bar color</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart__c</fullName>
        <inlineHelpText>Select type of charts to show in performance view</inlineHelpText>
        <label>Chart</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Area charts</fullName>
            </value>
            <value>
                <fullName>Bar charts</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Line charts</fullName>
            </value>
            <value>
                <fullName>Spline charts</fullName>
            </value>
            <sorted>true</sorted>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <defaultValue>Today() + 365</defaultValue>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_rate__c</fullName>
        <label>Import rate</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
            </value>
            <sorted>true</sorted>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page_Id__c</fullName>
        <label>Page Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socialmedia__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Socialmedia</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>Socialmedia Settings</relationshipLabel>
        <relationshipName>Socialmedia_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Socialmedia_type__c</fullName>
        <label>Socialmedia type</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Ad</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <defaultValue>Today() + 1</defaultValue>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Performance, general</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Performance, project</fullName>
            </value>
            <value>
                <fullName>Performance, marketing activity</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Performance, costcenter</fullName>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Watch_type__c</fullName>
        <label>Watch type</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Unique visitors</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Likes / click</fullName>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>Unique visitor &amp; click/likes</fullName>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <label>Socialmedia Settings</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ib0000000kPblEAE_00Nb0000009dDu8EAE</fullName>
        <active>true</active>
        <field>Milestone__c.Target_Socialmedia__c</field>
        <filterItems>
            <field>socialmedia_settings__c.Type__c</field>
            <operation>equals</operation>
            <value>Milestone</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_01Ib0000001Hpy3EAC_00Nb000000AC36REAT</name>
    </namedFilters>
    <pluralLabel>Socialmedia Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>